# TravelDocumentsAgent

./: .gitignore  README.md  main.py  pyproject.toml
travel_documents/: test_document.html  travel_document.html  travel_document_mallorca.html
travel_documents_agent/: __init__.py  agent.json  agent.py  orchestrator.py
travel_documents_agent/sub_agents/: __init__.py  document_generator_agent.py  events_search_agent.py
travel_documents_agent/templates/: travel_document.html
travel_documents_agent/tools/: __init__.py  document_tools.py
traveldocumentsagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
